# mp3-enricher

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
tagger/: config.py  exceptions.py  logging_config.py  mp3_tagger.py
tagger/db/: album_repo.py  artist_links_repo.py  connection.py  manual_review_repo.py  models.py  tag_issues_repo.py  track_repo.py
tagger/db/migrations/: 001_initial.sql  002_add_compilation.sql  002_add_disc_number.sql  003_add_tag_issues.sql  004_add_artist_links.sql  005_rename_collective_to_link.sql  006_add_core_indexes.sql
tagger/enricher/: formatter.py  heuristic_enricher.py  link_scanner.py  models.py  pipeline.py  prefill.py  runner.py
tagger/enricher/discogs/: art_downloader.py  client.py  models.py  release_selector.py
tagger/enricher/llm/: base.py  claude_client.py  heuristic_client.py  prompt_builder.py
tagger/enricher/musicbrainz/: client.py  models.py
tagger/enricher/web/: scraper.py
tagger/integrity/: __init__.py  itunes_comparator.py  itunes_restorer.py  models.py  scanner.py
tagger/manual/: csv_handler.py
tagger/scanner/: folder_parser.py  id3_reader.py  walker.py
tagger/utils/: rate_limiter.py  retry.py
tagger/writer/: id3_writer.py  track_number_fixer.py
tests/: conftest.py
tests/integration/: test_discogs_enrichment.py  test_e2e_pipeline.py  test_fix_command.py  test_link_scan.py  test_multi_album_enrich.py  test_parallel_enrichment.py  test_process_manual.py  test_scan_integrity.py  test_scan_phase.py  test_track_number_fixer.py  test_write_phase.py
tests/unit/: test_cli.py  test_config.py  test_exceptions.py  test_logging.py  test_tester_enrich.py  test_tester_write.py
tests/unit/db/: test_album_repo.py  test_artist_links_repo.py  test_connection.py  test_manual_review_repo.py  test_tag_issues_repo.py  test_track_repo.py
tests/unit/enricher/: test_enrichment_models.py  test_formatter.py  test_heuristic_enricher.py  test_pipeline.py  test_prefill.py  test_runner.py  test_scraper.py
tests/unit/enricher/discogs/: test_art_downloader.py  test_client.py  test_models.py  test_release_selector.py
tests/unit/integrity/: test_itunes_comparator.py  test_itunes_restorer.py  test_scanner.py
tests/unit/manual/: test_csv_handler.py
tests/unit/scanner/: test_folder_parser.py  test_id3_reader.py  test_walker.py
tests/unit/utils/: test_rate_limiter.py  test_retry.py
tests/unit/writer/: test_id3_writer.py  test_track_number_fixer.py
(+4 files in other folders)
