[project]
name = "mp3-enricher"
version = "0.1.0"
description = "Parallelized, AI-assisted MP3 ID3 tag enrichment pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "mutagen>=1.47",
    "python3-discogs-client>=2.6",
    "rapidfuzz>=3.9",
    "tenacity>=8.3",
    "anthropic>=0.28",
    "google-generativeai>=0.7",
    "alive-progress>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-httpx>=0.30",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-beautifulsoup4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# scripts/ contains ad-hoc one-off utility scripts (not production code).
# They are not committed to git so CI never sees them, but exclude them
# from local ruff runs to avoid spurious failures.
exclude = ["scripts/"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "ANN",       # flake8-annotations
    "PT",        # flake8-pytest-style
    "RUF",       # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["tagger"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# mutagen has incomplete stubs — frame classes are not re-exported and constructors are untyped
module = ["mutagen", "mutagen.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=tagger",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
markers = [
    "unit: fast, no I/O",
    "integration: real filesystem or DB",
    "slow: tests that call live APIs",
]

[tool.coverage.run]
branch = true
source = ["tagger"]
omit = ["tagger/mp3_tagger.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
